Ensure user dependent elements visibility
Didn't spot any side-effects from doing this. Will have to watch out though.

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -133,17 +133,16 @@ body > footer {
 
 html
   .show-for-privileged-user
-    visibility: hidden
+    visibility: hidden !important
   
   &.not-signed-in
     .hide-without-user, .show-for-privileged-user
-      display: none
+      display: none !important
 
   &.signed-in
     .hide-with-user
-      display: none
+      display: none !important
   
   &.privileged-user
     .show-for-privileged-user
-      visibility: visible
-
+      visibility: visible !important
